--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<base href="/"/>-->
     <title>The Movie App</title>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>-->
     <link rel="stylesheet" type="text/css" href="/css/app.css"/>
 </head>
 <body>
